<resources>
    <string name="app_name">正邦仓管</string>
    <string name="label_title">正邦仓库管理系统</string>

    <string name="label_arrival_storage">采购入库</string>
    <string name="label_purchase_detail">入库详情</string>
    <string name="label_pick_out_storage">领料出库</string>
    <string name="label_purchase_returns">采购退货</string>
    <string name="label_purchase_storage">采购入库</string>
    <string name="label_sales_stock">销售出库</string>
    <string name="label_send_out_storage">发货出库</string>
    <string name="send_out_storage_detail">发货出库详情</string>
    <string name="label_warehouse_manage">仓库管理</string>
    <string name="label_return_in_storage">退货入库</string>
    <string name="label_product_inventory">成品库存</string>
    <string name="label_produce_in_storage">生产入库</string>
    <string name="label_produce_in_storage_detail">生产入库明细</string>
    <string name="label_purchase_in_storage">外采入库</string>
    <string name="label_purchase_in_storage_reversal">外采入库冲销明细</string>
    <string name="output_reversal">生产入库冲销详情</string>
    <string name="label_return_sell">销售退货</string>
    <string name="label_return_sell_detail">销售退货明细</string>
    <string name="label_material_inventory">原辅料库存</string>

    <string name="label_check">质检</string>
    <string name="check_update">质检修改</string>
    <string name="label_quality_check">品管检验</string>
    <string name="label_inventory">盘点</string>
    <string name="company_no">组织代码</string>
    <string name="company_name">正邦集团</string>

    <string name="password">密码</string>
    <string name="user_no">用户编号</string>
    <string name="action_sign_in">登录</string>
    <string name="inventory_tracking">库存追踪</string>
    <string name="inventory_tracking_position">库位码库存查询</string>
    <string name="box_code_query">箱码查询</string>
    <string name="zb_slogan">以人为本 以正兴邦</string>
    <string name="action_sign_in_short">登录</string>
    <string name="label_switch_phone">切换手机登录</string>
    <string name="label_switch_company">切换组织代码登录</string>

    <string name="phone">手机号</string>
    <string name="label_cancel">退出登录</string>
    <string name="label_modify_pwd">修改密码</string>
    <string name="label_contact_phone">联系电话</string>
    <string name="label_contact_address">联系地址</string>
    <string name="label_person_center">个人中心</string>
    <string name="product_query">成品追踪</string>
    <string name="position_query">库位码库存查询</string>

    <string name="label_warehouse">所在仓库</string>
    <string name="warehouse_no">仓库编号：</string>
    <string name="label_belong_company">归属企业</string>
    <string name="label_in_storage_time">入库时间</string>
    <string name="label_out_storage_time">出库时间</string>
    <string name="label_target_warehouse">目标仓库</string>
    <string name="label_in_storage_detail">入库明细</string>
    <string name="label_arrival_storage_detail">到货明细</string>

    <string name="str_busy">忙碌中，请稍等</string>
    <string name="str_failed">解码失败,请重试</string>
    <string name="title_select_time">选择时间</string>
    <string name="str_please_waiting">扫描中，请稍等</string>

    <string name="cancel">取消</string>
    <string name="label_commit">确定</string>


    <string name="error">error</string>
    <string name="empty">empty</string>
    <string name="loading">loading</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_arrival_details">到货明细</string>
    <string name="picking_details">领料明细</string>
    <string name="material_storage">入库</string>
    <string name="pick_out_storage">出库</string>
    <string name="material_pick_out_details">领料出库详情</string>
    <string name="send_out_storage_reversal">发货出库详情冲销</string>
    <string name="pick_out_storage_reversal">领料出库明细冲销</string>

    <string name="purchase_house_reversal">采购入库明细冲销</string>
    <string name="back_goods">退货</string>
    <string name="materials_back_goods_details">采购退货详情</string>
    <string name="purchase_back_goods">采购退货明细冲销</string>

    <string name="check_message">质检信息</string>

    <string name="materials_inventor">原辅料盘点</string>
    <string name="materials_move_reversal">原辅料移库冲销</string>

    <string name="product_inventor">成品盘点</string>
    <string name="product_delete">单据删除</string>
    <string name="delete">删除</string>
    <string name="product_reversal">成品冲销</string>

    <string name="button_commit">提交</string>
    <string name="button_scan_code">扫码</string>
    <string name="button_scan_move">扫码移库</string>
    <string name="button_confirm">确定</string>


    <string name="box_binding_list">箱码绑定明细</string>

    <!--销售出库-->
    <string name="sales_out_of_stock">销售出库</string>
    <string name="sales_out_of_stock_details">销售出库详情</string>

    <!-- fixed tip 固定提示-->
    <string name="select_house">仓库选择</string>
    <string name="where_house">所在仓库：</string>
    <string name="other_message">其他信息</string>
    <string name="remark_message">备注</string>
    <string name="box_code_details">箱码明细</string>
    <!-- 移库 -->
    <string name="raw_materials">原辅料</string>
    <string name="finish_product">成品</string>
    <string name="label_transfer_storage">移库</string>
    <string name="material_reversal">冲销</string>
    <string name="materials_move">原辅料移库</string>
    <string name="move_room_source">源库位</string>
    <string name="move_house_source">原仓库</string>
    <string name="move_room_target">目标库位</string>
    <string name="move_house_target">目标仓库</string>
    <string name="product_move">成品移库</string>
    <string name="move_number">移库数量：</string>
    <string name="product_select">产品选择</string>
    <string name="product_search">产品搜索</string>
    <string name="house_select">仓库选择：</string>
    <string name="house_target">目标仓库：</string>
    <string name="reversal_select">冲销选择</string>
    <string name="box_scan">箱码扫码</string>
</resources>
