<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tpbackground"
    android:paddingLeft="@dimen/space_10"
    android:paddingRight="@dimen/space_10">

    <ImageView
        android:id="@+id/image_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@mipmap/hk1" />

    <ImageView
        android:id="@+id/zb_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/zblogo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/zb_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/label_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_24"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/zb_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image_material"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@mipmap/hk2"
        app:layout_constraintTop_toBottomOf="@+id/image_top" />

    <TextView
        android:id="@+id/tv_material_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_material_inventory"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_material" />

    <TextView
        android:id="@+id/tv_arrival_in_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:background="@mipmap/qsback"
        android:drawableTop="@mipmap/dhicon"
        android:layout_margin="@dimen/space_5"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_arrival_storage"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_pick_out_storage"
        app:layout_constraintTop_toBottomOf="@+id/tv_material_inventory" />

    <TextView
        android:id="@+id/tv_pick_out_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="@dimen/space_5"
        android:background="@mipmap/lsback"
        android:drawableTop="@mipmap/llicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_pick_out_storage"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/tv_arrival_in_storage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_material_inventory" />

    <TextView
        android:id="@+id/tv_purchase_returns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@mipmap/qsback"
        android:drawableTop="@mipmap/cgicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_purchase_returns"
        android:textColor="@color/white"
        app:layout_constraintRight_toLeftOf="@id/tv_sales_stock"
        app:layout_constraintTop_toBottomOf="@+id/tv_arrival_in_storage" />

    <TextView
        android:id="@+id/tv_sales_stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        app:layout_constraintHorizontal_weight="1"
        android:background="@mipmap/qsback"
        android:drawableTop="@mipmap/cgicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_sales_stock"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/tv_purchase_returns"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_arrival_in_storage" />

    <ImageView
        android:id="@+id/image_pick"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="@dimen/space_5"
        android:background="@drawable/hk2"
        app:layout_constraintTop_toBottomOf="@+id/tv_purchase_returns"/>

    <TextView
        android:id="@+id/tv_product_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_product_inventory"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_pick" />


    <TextView
        android:id="@+id/tv_purchase_in_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        android:background="@mipmap/qsback"
        android:drawableTop="@mipmap/wcicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_purchase_in_storage"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_produce_in_storage"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_inventory" />

    <TextView
        android:id="@+id/tv_produce_in_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        android:background="@mipmap/lsback"
        android:drawableTop="@mipmap/scicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_produce_in_storage"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_purchase_in_storage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_inventory" />


    <TextView
        android:id="@+id/tv_send_out_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        android:background="@mipmap/lsback"
        android:drawableTop="@mipmap/fhicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_send_out_storage"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_return_in_storage"
        app:layout_constraintTop_toBottomOf="@+id/tv_purchase_in_storage" />

    <TextView
        android:id="@+id/tv_return_in_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        android:background="@mipmap/qsback"
        android:drawableTop="@mipmap/thicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_return_in_storage"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_send_out_storage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_purchase_in_storage" />


    <ImageView
        android:id="@+id/image_warehouse_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hk2"
        app:layout_constraintTop_toBottomOf="@+id/image_pick" />

    <TextView
        android:id="@+id/tv_warehouse_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_warehouse_manage"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_warehouse_manage" />


    <TextView
        android:id="@+id/tv_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/lsback"
        android:drawableTop="@mipmap/pdicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_inventory"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_transfer_storage"
        app:layout_constraintTop_toBottomOf="@+id/tv_warehouse_manage" />

    <TextView
        android:id="@+id/tv_transfer_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/qsback"
        android:drawableTop="@mipmap/ykicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_transfer_storage"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/tv_inventory"
        app:layout_constraintRight_toLeftOf="@+id/tv_person_center"
        app:layout_constraintTop_toBottomOf="@+id/tv_warehouse_manage" />

    <TextView
        android:id="@+id/tv_person_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/lsback"
        android:drawableTop="@mipmap/wdicon"
        android:drawablePadding="@dimen/space_3"
        android:gravity="center"
        android:padding="@dimen/space_3"
        android:text="@string/label_person_center"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/tv_transfer_storage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_warehouse_manage" />


</android.support.constraint.ConstraintLayout>